--- a/tone_analyzer/public/stylesheets/style.css
+++ b/tone_analyzer/public/stylesheets/style.css
@@ -9,6 +9,13 @@ h1 {
   margin-bottom: 20px;
 }
 
+.topleft {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  font-size: 18px;
+}
+
 .bigtext {
   font-size: 3rem !important;
 }
